# hw1

./: .clang-format  CMakeLists.txt  run
include/: arrays.hpp  homework.hpp  io.hpp  prime_numbers.hpp  random.hpp
scripts/: black.py  clang_format.py
src/: arrays.cpp  homework.cpp  io.cpp  main.cpp  prime_numbers.cpp  random.cpp
